--- a/doc/gimliuses.bib
+++ b/doc/gimliuses.bib
@@ -1,143 +1,125 @@
 % Encoding: UTF-8
 
-@Article{CostabelGue2014VZJ,
+@Article{Costabel2014,
   author    = {Costabel, S. and G{\"u}nther, T.},
-  title     = {{N}oninvasive {E}stimation of {W}ater {R}etention {P}arameters by {O}bserving the {C}apillary {F}ringe with {M}agnetic {R}esonance {S}ounding},
   journal   = {Vadose Zone Journal},
+  title     = {{N}oninvasive {E}stimation of {W}ater {R}etention {P}arameters by {O}bserving the {C}apillary {F}ringe with {M}agnetic {R}esonance {S}ounding},
   year      = {2014},
-  volume    = {13},
   number    = {6},
   pages     = {14},
+  volume    = {13},
   doi       = {10.2136/vzj2013.09.0163},
   timestamp = {2014.06.06},
-  url       = {https://dl.sciencesocieties.org/publications/vzj/abstracts/0/0/},
 }
 
-@Article{GuentherMue2012HESS,
+@Article{Guenther2012,
   author    = {G{\"u}nther, T. and M{\"u}ller-Petke, M.},
-  title     = {{H}ydraulic properties at the {N}orth {S}ea island of {B}orkum derived from joint inversion of magnetic resonance and electrical resistivity soundings},
   journal   = {Hydrology and Earth System Sciences},
+  title     = {{H}ydraulic properties at the {N}orth {S}ea island of {B}orkum derived from joint inversion of magnetic resonance and electrical resistivity soundings},
   year      = {2012},
-  volume    = {16},
   number    = {9},
   pages     = {3279--3291},
+  volume    = {16},
   doi       = {10.5194/hess-16-3279-2012},
-  owner     = {Guenther.T},
   timestamp = {2016.09.14},
 }
 
-@Article{LoewerIgeWag2016,
+@Article{Loewer2016,
   author    = {Loewer, M. and Igel, J. and Wagner, N.},
-  title     = {{S}pectral {D}ecomposition of {S}oil {E}lectrical and {D}ielectric {L}osses and {P}rediction of {I}n {S}itu {GPR} {P}erformance},
   journal   = {{IEEE} J. Sel. Top. Appl. Earth Observations Remote Sensing},
+  title     = {{S}pectral {D}ecomposition of {S}oil {E}lectrical and {D}ielectric {L}osses and {P}rediction of {I}n {S}itu {GPR} {P}erformance},
   year      = {2016},
-  volume    = {9},
   number    = {1},
   pages     = {212--230},
+  volume    = {9},
   doi       = {10.1109/jstars.2015.2424152},
-  owner     = {TG},
   publisher = {Institute of Electrical {\&} Electronics Engineers ({IEEE})},
   timestamp = {2016.09.14},
-  url       = {http://dx.doi.org/10.1109/JSTARS.2015.2424152},
 }
 
-@InProceedings{UllmannWieGueSie2015NSG,
+@InProceedings{Ullmann2015,
   author    = {Ullmann, A. and Wiederhold, H. and Günther, T. and Siemon, B.},
-  title     = {{H}ydrogeophysics at the {E}lbe-{W}eser estuary prior to groundwater modelling},
   booktitle = {Ext. Abstr., Near Surface Geoscience 2015, Turin, Italy},
+  title     = {{H}ydrogeophysics at the {E}lbe-{W}eser estuary prior to groundwater modelling},
   year      = {2015},
-  owner     = {TG},
   timestamp = {2016.09.14},
 }
 
-@InProceedings{IgelStaGue2016SAGEEP,
+@InProceedings{Igel2016,
   author    = {Igel, J. and Stadler, S. and Günther, T.},
   booktitle = {Ext. Abstr., SAGEEP, Denver, USA},
   title     = {{H}igh-resolution investigation of the capillary transition zone and its influence on {GPR} signatures},
   year      = {2016},
   doi       = {10.1109/icgpr.2016.7572603},
-  owner     = {TG},
   timestamp = {2016.06.28},
 }
 
-@Article{CosciaGreLin+2010,
-  author    = {Coscia,I.  and Greenhalgh, S. and Linde, N. and Doetsch, J. and Marescot, L. and G{\"u}nther, T. and Green, A.},
-  title     = {3{D} crosshole apparent resistivity static inversion and monitoring of a coupled river-aquifer system},
+@Article{Coscia2011,
+  author    = {Coscia,I. and Greenhalgh, S. and Linde, N. and Doetsch, J. and Marescot, L. and G{\"u}nther, T. and Green, A.},
   journal   = {Geophysics},
+  title     = {3{D} crosshole apparent resistivity static inversion and monitoring of a coupled river-aquifer system},
   year      = {2011},
-  volume    = {76},
   number    = {2},
   pages     = {G49-59},
-  owner     = {Guenther.T},
+  volume    = {76},
   doi       = {10.1190/1.3553003},
   timestamp = {2010.08.09},
 }
 
-@Article{CostabelGueDluMue2016,
+@Article{Costabel2016,
   author    = {Costabel, S. and G{\"u}nther, T. and Dlugosch, R. and M{\"u}ller-Petke, M.},
-  title     = {{T}orus-nuclear magnetic resonance: {Q}uasicontinuous airborne magnetic resonance profiling by using a helium-filled balloon},
   journal   = {Geophysics},
+  title     = {{T}orus-nuclear magnetic resonance: {Q}uasicontinuous airborne magnetic resonance profiling by using a helium-filled balloon},
   year      = {2016},
-  volume    = {81},
+  month     = {jun},
   number    = {4},
   pages     = {WB119--WB129},
-  month     = {jun},
+  volume    = {81},
   doi       = {10.1190/geo2015-0467.1},
-  file      = {costabel2016G.pdf:costabel2016G.pdf:PDF},
-  owner     = {TG},
   publisher = {Society of Exploration Geophysicists},
   timestamp = {2016.09.14},
-  url       = {http://dx.doi.org/10.1190/geo2015-0467.1},
 }
 
-@Article{WagnerGueSchMau2015GEO,
+@Article{Wagner2015,
   author    = {Wagner, F.M. and G{\"u}nther, T. and Schmidt-Hattenberger, C. and Maurer, H.},
-  title     = {{C}onstructive optimization of electrode locations for target-focused resistivity monitoring},
   journal   = {Geophysics},
+  title     = {{C}onstructive optimization of electrode locations for target-focused resistivity monitoring},
   year      = {2015},
-  volume    = {80},
   number    = {2},
   pages     = {E29--E40},
+  volume    = {80},
   doi       = {10.1190/geo2014-0214.1},
-  owner     = {TG},
   timestamp = {2015.01.14},
 }
 
-@InProceedings{GuentherRuecker2006SAGEEP-Joint,
+@InProceedings{Guenther2006,
   author    = {G{\"u}nther, T. and R{\"u}cker, C.},
-  title     = {{A} new joint inversion approach applied to the combined tomography of dc resistivity and seismic refraction data.},
   booktitle = {Ext. Abstract, 19. EEGS annual meeting (SAGEEP), 02.-06.04.2006; Seattle, USA.},
+  title     = {{A} new joint inversion approach applied to the combined tomography of dc resistivity and seismic refraction data.},
   year      = {2006},
-  abstract  = {We present a new joint inversion approach that allows for a combined inversion of independent physical parameters by exchanging structural information. The technique is based on the ideas of robust modeling. Occurring gradients of one parameter facilitate the development of gradients in the other but does not enforce this. In the presence of boundaries that can be seen by both methods it leads to sharp contrasted models. Finally, a combined image of the subsurface is obtained by cluster analysis. The technique is applied to the inversion of dc resistivity and seismic refraction data. Two synthetic data sets show how different boundary types are resolved with and without structural coupling. It is demonstrated how the quality of the inversion results is improved by the new approach.},
   doi       = {10.4133/1.2923578},
-  file      = {GuentherRuecker2006SAGEEP-Joint.pdf:GuentherRuecker2006SAGEEP-Joint.pdf:PDF},
-  owner     = {Guenther.T},
   timestamp = {2015.12.21},
 }
 
-@InProceedings{GuentherDluHolYar2010SAGEEP,
+@InProceedings{Guenther2010,
   author    = {G{\"u}nther, T. and Dlugosch, R. and Holland, R. and Yaramanci, U.},
-  title     = {{A}quifer characterization using coupled inversion of {MRS} \& {DC}/{IP} data on a hydrogeophysical test-site},
   booktitle = {Ext. Abstract, 23. EEGS annual meeting (SAGEEP), April 11-14, 2010; Keystone, CO.},
+  title     = {{A}quifer characterization using coupled inversion of {MRS} \& {DC}/{IP} data on a hydrogeophysical test-site},
   year      = {2010},
-  volume    = {23},
   pages     = {302-307},
-  abstract  = {We present a new joint inversion approach that allows for a combined inversion of independent physical parameters by exchanging structural information. The technique is based on the ideas of robust modeling. Occurring gradients of one parameter facilitate the development of gradients in the other but does not enforce this. In the presence of boundaries that can be seen by both methods it leads to sharp contrasted models. Finally, a combined image of the subsurface is obtained by cluster analysis. The technique is applied to the inversion of dc resistivity and seismic refraction data. Two synthetic data sets show how different boundary types are resolved with and without structural coupling. It is demonstrated how the quality of the inversion results is improved by the new approach.},
+  volume    = {23},
   doi       = {10.4133/1.3445447},
-  owner     = {Guenther.T},
   timestamp = {2016.09.14},
 }
 
-@Article{guenther2016JoAG,
+@Article{Guenther2016,
   author    = {G{\"u}nther, T. and Martin, T.},
-  title     = {{S}pectral two-dimensional inversion of frequency-domain induced polarisation data from a mining slag heap},
   journal   = {Journal of Applied Geophysics},
+  title     = {{S}pectral two-dimensional inversion of frequency-domain induced polarisation data from a mining slag heap},
   year      = {2016},
-  volume    = {135},
   pages     = {436-448},
+  volume    = {135},
   doi       = {10.1016/j.jappgeo.2016.01.008},
-  file      = {guenther2016JoAG.pdf:guenther2016JoAG.pdf:PDF},
-  owner     = {TG},
   timestamp = {2015.12.21},
 }
 
@@ -150,56 +132,49 @@
   pages     = {456-465},
   month     = {dec},
   doi       = {10.1016/j.jappgeo.2015.12.003},
-  owner     = {Dlugosch.R},
   publisher = {Elsevier {BV}},
   timestamp = {2016.12.16},
 }
 
-@Article{loewer2017GJI,
+@Article{Loewer2017,
   author    = {Loewer, M. and G\"{u}nther, T. and Igel, J. and Kruschwitz, S. and Martin, T. and Wagner, N.},
-  title     = {Ultra-broad-band electrical spectroscopy of soils and sediments{\textemdash}a combined permittivity and conductivity model},
   journal   = {Geophysical Journal International},
+  title     = {Ultra-broad-band electrical spectroscopy of soils and sediments{\textemdash}a combined permittivity and conductivity model},
   year      = {2017},
-  volume    = {210},
+  month     = {jun},
   number    = {3},
   pages     = {1360--1373},
-  month     = {jun},
+  volume    = {210},
   doi       = {10.1093/gji/ggx242},
-  owner     = {Dlugosch.R},
   publisher = {Oxford University Press ({OUP})},
   timestamp = {2017.07.27},
-  url       = {https://doi.org/10.1093/gji/ggx242},
 }
 
-@Article{ronczka2017SE,
+@Article{Ronczka2017,
   author    = {Ronczka, M. and Hellman, K. and G\"{u}nther, T. and Wis{\'{e}}n, R. and Dahlin, T.},
-  title     = {Electric resistivity and seismic refraction tomography: a challenging joint underwater survey at \"{A}sp\"{o} Hard Rock Laboratory},
   journal   = {Solid Earth},
+  title     = {Electric resistivity and seismic refraction tomography: a challenging joint underwater survey at \"{A}sp\"{o} Hard Rock Laboratory},
   year      = {2017},
-  volume    = {8},
+  month     = {jun},
   number    = {3},
   pages     = {671--682},
-  month     = {jun},
+  volume    = {8},
   doi       = {10.5194/se-8-671-2017},
-  owner     = {Dlugosch.R},
   publisher = {Copernicus {GmbH}},
   timestamp = {2017.07.27},
-  url       = {https://doi.org/10.5194/se-8-671-2017},
 }
 
-@Article{hellman2017JoAG,
+@Article{Hellman2017,
   author    = {Hellman, K. and Ronczka, M. and G\"{u}nther, T. and Wennermark, M. and R\"{u}cker, C. and Dahlin, T.},
-  title     = {Structurally coupled inversion of {ERT} and refraction seismic data combined with cluster-based model integration},
   journal   = {Journal of Applied Geophysics},
+  title     = {Structurally coupled inversion of {ERT} and refraction seismic data combined with cluster-based model integration},
   year      = {2017},
-  volume    = {143},
-  pages     = {169--181},
   month     = {aug},
+  pages     = {169--181},
+  volume    = {143},
   doi       = {10.1016/j.jappgeo.2017.06.008},
-  owner     = {Dlugosch.R},
   publisher = {Elsevier {BV}},
   timestamp = {2017.07.27},
-  url       = {https://doi.org/10.1016/j.jappgeo.2017.06.008},
 }
 
 @Article{Bergmann2017,
@@ -210,9 +185,7 @@
   volume    = {65},
   pages     = {859-875},
   issn      = {1365-2478},
-  abstract  = {Between the years 2008 and 2013, approximately 67 kilotons of CO2 have been injected at the Ketzin site, Germany. As part of the geophysical monitoring programme, time-lapse electrical resistivity tomography has been applied using crosshole and surface-downhole measurements of electrical resistivity tomography. The data collection of electrical resistivity tomography is partly based on electrodes that are permanently installed in three wells at the site (one injection well and two observation wells). Both types of ERT measurements consistently show the build-up of a CO2-related resistivity signature near the injection point. Based on the imaged resistivity changes and a petrophysical model, CO2 saturation levels are estimated. These CO2 saturations are interpreted in conjunction with CO2 saturations inferred from neutron-gamma loggings. Apart from the CO2–brine substitution response in the observed resistivity changes, significant imprints from the dynamic behaviour of the CO2 in the reservoir are observed.},
   doi       = {10.1111/1365-2478.12426},
-  owner     = {wagner},
   publisher = {Wiley Online Library},
   timestamp = {2016.08.24},
 }
@@ -225,9 +198,7 @@
   volume    = {75},
   pages     = {273-281},
   doi       = {10.1016/j.ijggc.2018.04.009},
-  owner     = {fwagner},
   timestamp = {2018.02.18},
-  url       = {https://authors.elsevier.com/c/1XN7o6E2M2gCpK},
 }
 
 @Article{Wiese2018,
@@ -238,9 +209,7 @@
   volume    = {75},
   pages     = {262-272},
   doi       = {10.1016/j.ijggc.2018.05.013},
-  owner     = {fwagner},
   timestamp = {2018.02.18},
-  url       = {https://authors.elsevier.com/c/1XN7o6E2M2gCam},
 }
 
 @Article{Steiner2019,
@@ -250,7 +219,6 @@
   year    = {2019},
   pages   = {1--27},
   doi     = {10.5194/tc-2019-52},
-  url     = {https://www.the-cryosphere-discuss.net/tc-2019-52/tc-2019-52.pdf},
 }
 
 @Article{Wagner2019,
@@ -264,7 +232,7 @@
   doi     = {10.1093/gji/ggz402},
 }
 
-@Article{watlet2018imaging,
+@Article{Watlet2018,
   author    = {Watlet, A. and Kaufmann, O. and Triantafyllou, A. and Poulain, Am. and Chambers, J. and Meldrum, P. and Wilkinson, P. and Hallet, V. and Quinif, Y. and van~Ruymbeke, M. and van~Camp, M.},
   journal   = {Hydrology and Earth System Sciences},
   title     = {Imaging groundwater infiltration dynamics in the karst vadose zone with long-term ERT monitoring},
@@ -276,7 +244,7 @@
   publisher = {European Geosciences Union},
 }
 
-@Article{rochlitz2019custem,
+@Article{Rochlitz2019,
   author    = {Rochlitz, R. and Skibbe, N. and G{\"u}nther, T.},
   journal   = {Geophysics},
   title     = {custEM: Customizable finite-element simulation of complex controlled-source electromagnetic data},
@@ -288,7 +256,7 @@
   publisher = {Society of Exploration Geophysicists},
 }
 
-@Article{jordi2018geostatistical,
+@Article{Jordi2018,
   author    = {Jordi, C. and Doetsch, J. and G{\"u}nther, T. and Schmelzbach, C. and Robertsson, J. O.A.},
   journal   = {Geophysical Journal International},
   title     = {Geostatistical regularization operators for geophysical inverse problems on irregular meshes},
@@ -300,7 +268,7 @@
   publisher = {Oxford University Press},
 }
 
-@Article{rossi2018data,
+@Article{Rossi2018,
   author    = {Rossi, M. and Dahlin, T. and Olsson, P.-I. and G{\"u}nther, T.},
   journal   = {Near Surface Geophysics},
   title     = {Data acquisition, processing and filtering for reliable 3D resistivity and time-domain induced polarisation tomography in an urban area: field example of Vinsta, Stockholm},
@@ -312,7 +280,7 @@
   publisher = {European Association of Geoscientists \& Engineers},
 }
 
-@Article{ronczka2018geophysical,
+@Article{Ronczka2018,
   author    = {Ronczka, M. and Wis{\'e}n, R. and Dahlin, T.},
   journal   = {Near Surface Geophysics},
   title     = {Geophysical pre-investigation for a Stockholm tunnel project: joint inversion and interpretation of geoelectric and seismic refraction data in an urban environment},
@@ -324,7 +292,7 @@
   publisher = {European Association of Geoscientists \& Engineers},
 }
 
-@Article{skibbe2018structurally,
+@Article{Skibbe2018,
   author    = {Skibbe, N. and G{\"u}nther, T. and M{\"u}ller-Petke, M.},
   journal   = {Geophysics},
   title     = {Structurally coupled cooperative inversion of magnetic resonance with resistivity soundings},
@@ -336,7 +304,7 @@
   publisher = {Society of Exploration Geophysicists and American Association of Petroleum~…},
 }
 
-@Article{wunderlich2018constraining,
+@Article{Wunderlich2018,
   author    = {Wunderlich, T. and Fischer, P. and Wilken, D. and Hadler, H. and Erkul, E. and Mecking, R. and G{\"u}nther, T. and Heinzelmann, M. and V{\"o}tt, A. and Rabbel, W.},
   journal   = {Geophysics},
   title     = {Constraining electric resistivity tomography by direct push electric conductivity logs and vibracores: An exemplary study of the Fiume Morto silted riverbed (Ostia Antica, western Italy)},
@@ -348,7 +316,7 @@
   publisher = {Society of Exploration Geophysicists},
 }
 
-@Article{borner2017effect,
+@Article{Boerner2017,
   author    = {B{\"o}rner, F. and M{\"u}ller-Huber, E. and Branka, D. and R{\"u}cker, C.},
   journal   = {Near Surface Geophysics},
   title     = {The effect of compaction on complex electrical resistivity of shaly sands},
@@ -360,7 +328,7 @@
   publisher = {European Association of Geoscientists \& Engineers},
 }
 
-@Article{ochs2020considerations,
+@Article{Ochs2020,
   author    = {Ochs, J. and Klitzsch, N.},
   journal   = {Journal of Applied Geophysics},
   title     = {Considerations regarding small-scale surface and borehole-to-surface electrical resistivity tomography},
@@ -371,30 +339,30 @@
   publisher = {Elsevier},
 }
 
-@Article{skibbe2020,
+@Article{Skibbe2020,
   author  = {Skibbe, N. and Rochlitz, R. and G{\"u}nther, T. and M{\"u}ller-Petke, M.},
-  title   = {COMET: An open-source toolbox for Surface NMR},
   journal = {Geophysics},
+  title   = {COMET: An open-source toolbox for Surface NMR},
   year    = {2020},
-  volume  = {85},
   number  = {3},
   pages   = {1--56},
+  volume  = {85},
   doi     = {10.1190/geo2019-0484.1},
 }
 
-@Article{jordi2020structural,
+@Article{Jordi2020,
   author    = {Jordi, C. and Doetsch, J. and G{\"u}nther, T. and Schmelzbach, C. and Maurer, H. and Robertsson, J. O.A.},
-  title     = {Structural joint inversion on irregular meshes},
   journal   = {Geophysical Journal International},
+  title     = {Structural joint inversion on irregular meshes},
   year      = {2020},
-  volume    = {220},
   number    = {3},
   pages     = {1995--2008},
+  volume    = {220},
   doi       = {10.1093/gji/ggz550},
   publisher = {Oxford University Press},
 }
 
-@Article{de2019joint,
+@Article{Pasquale2019,
   author    = {de~Pasquale, G. and Linde, N. and Greenwood, A.},
   journal   = {Journal of Applied Geophysics},
   title     = {Joint probabilistic inversion of DC resistivity and seismic refraction data applied to bedrock/regolith interface delineation},
@@ -405,7 +373,7 @@
   publisher = {Elsevier},
 }
 
-@Article{whiteley2020landslide,
+@Article{Whiteley2020,
   author    = {Whiteley, J.S. and Chambers, J.E. and Uhlemann, S. and Boyd, J. and Cimpoiasu, M.O. and Holmes, J.L. and Inauen, C.M. and Watlet, A. and Hawley-Sibbett, L.R. and Sujitapan, C. and others},
   journal   = {Engineering Geology},
   title     = {Landslide monitoring using seismic refraction tomography--The importance of incorporating topographic variations},
@@ -415,7 +383,7 @@
   publisher = {Elsevier},
 }
 
-@Article{clement2020frequency,
+@Article{Clement2020,
   author    = {Cl{\'e}ment, R. and P{\"a}rn, J. and Maddison, M. and Henine, H. and Chaumont, C. and Tournebize, J. and Uri, V. and Espenberg, M. and G{\"u}nther, T. and Mander, {\"U}.},
   journal   = {Journal of Applied Geophysics},
   title     = {Frequency-domain electromagnetic induction for upscaling greenhouse gas fluxes in two hemiboreal drained peatland forests},
@@ -425,7 +393,7 @@
   publisher = {Elsevier},
 }
 
-@Article{nickschick2019large,
+@Article{Nickschick2019,
   author    = {Nickschick, T. and Flechsig, C. and Mrlina, J. and Oppermann, F.k and L{\"o}big, F. and G{\"u}nther, T.},
   journal   = {Solid Earth},
   title     = {Large-scale electrical resistivity tomography in the Cheb Basin (Eger Rift) at an International Continental Drilling Program (ICDP) monitoring site to image fluid-related structures},
@@ -437,7 +405,7 @@
   publisher = {Copernicus GmbH},
 }
 
-@Article{leger2019distributed,
+@Article{Leger2019,
   author  = {L{\'e}ger, E. and Dafflon, B. and Robert, Y.},
   journal = {The Cryosphere},
   title   = {A distributed temperature profiling method for assessing spatial variability in ground},
@@ -447,7 +415,7 @@
   doi     = {10.5194/tc-13-2853-2019},
 }
 
-@Article{assouline2019machine,
+@Article{Assouline2019,
   author    = {Assouline, D. and Mohajeri, N. and Gudmundsson, A. and Scartezzini, J.-L.},
   journal   = {Geothermal Energy},
   title     = {A machine learning approach for mapping the very shallow theoretical geothermal potential},
@@ -459,15 +427,14 @@
   publisher = {Springer},
 }
 
-@Article{pub.1121196731,
+@Article{LopezAlvis2019,
   author  = {Lopez-Alvis, J. and Hermans, T. and Nguyen, F.},
-  title   = {A cross-validation framework to extract data features for reducing structural uncertainty in subsurface heterogeneity},
   journal = {Advances in Water Resources},
+  title   = {A cross-validation framework to extract data features for reducing structural uncertainty in subsurface heterogeneity},
   year    = {2019},
-  volume  = {133},
   pages   = {103427},
+  volume  = {133},
   doi     = {10.1016/j.advwatres.2019.103427},
-  url     = {https://app.dimensions.ai/details/publication/pub.1121196731},
 }
 
 @Article{Palacios2020,
@@ -479,7 +446,6 @@
   pages   = {2121--2139},
   volume  = {24},
   doi     = {10.5194/hess-24-2121-2020},
-  url     = {https://doi.org/10.5194/hess-24-2121-2020},
 }
 
 @Article{Klingler2020,
@@ -524,24 +490,22 @@
   doi            = {10.3390/w12051230},
 }
 
-@Article{dePasquale2019,
+@Article{Pasquale2019a,
   author  = {de~Pasquale, G. and Linde, N. and Doetsch, J. and Holbrook, W.S.},
   journal = {Geophysical Journal International},
   title   = {Probabilistic inference of subsurface heterogeneity and interface geometry using geophysical data},
   year    = {2019},
   doi     = {10.1093/gji/ggz055},
-  url     = {https://doi.org/10.1093/gji/ggz055},
 }
 
-@article{Miller2020JVGR,
-title = "Snapshot of a magmatic/hydrothermal system from electrical resistivity tomography and fumarolic composition, Whakaari/White Island, New Zealand",
-journal = "Journal of Volcanology and Geothermal Research",
-pages = "106909",
-year = "2020",
-issn = "0377-0273",
-doi = "https://doi.org/10.1016/j.jvolgeores.2020.106909",
-url = "http://www.sciencedirect.com/science/article/pii/S0377027320301529",
-author = "Craig A. Miller and Bruce W. Christenson and Svetlana Byrdina and Jean Vandemeulebrouck and Thomas Brakenrig and Karen Britten and Jackson Shanks and Gabe Epstein"
+@Article{Miller2020,
+  author  = {Miller, C. A. and Christenson, B. W. and Byrdina, S. and Vandemeulebrouck, J. and Brakenrig, T. and Britten, K. and Shanks, J. and Epstein, G.},
+  journal = {Journal of Volcanology and Geothermal Research},
+  title   = {Snapshot of a magmatic/hydrothermal system from electrical resistivity tomography and fumarolic composition, Whakaari/White Island, New Zealand},
+  year    = {2020},
+  issn    = {0377-0273},
+  pages   = {106909},
+  doi     = {https://doi.org/10.1016/j.jvolgeores.2020.106909},
 }
 
 @Article{Folch2020,
@@ -553,7 +517,6 @@ author = "Craig A. Miller and Bruce W. Christenson and Svetlana Byrdina and Jean
   volume   = {588},
   doi      = {10.1016/j.jhydrol.2020.125050},
   keywords = {Cross hole electrical resistivity tomography, Fiber optic distributed temperature sensing, Formation electrical conductivity, Sea water intrusion, Submarine groundwater discharge, Alluvial aquifer},
-  url      = {http://www.sciencedirect.com/science/article/pii/S0022169420305102},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
